--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,109 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background: #ecb271;
+}
+
+.logo-img {
+  width: 110px;
+}
+
+.nav-link {
+  padding: 20px;
+  color: #2b5d78;
+}
+
+.nav-link:hover {
+  color: white;
+}
+
+.landing {
+  width: 100%;
+}
+
+.landing-hero-image {
+  max-width: 700px;
+  width: 100%;
+  margin-left: auto;
+  display: block;
+}
+
+a {
+  text-decoration: none;
+}
+
+.alert-danger {
+  color: red;
+}
+
+.alert-success {
+  color: green;
+}
+
+button {
+  cursor: pointer;
+}
+.btn {
+  border: 2px solid;
+}
+.btn-delete {
+  background: red;
+  color: white;
+  padding: 10px;
+}
+
+.social-link-toggle {
+  display: inline-block;
+  width: fit-content;
+  cursor: pointer;
+  background: black;
+  color: white;
+}
+
+.profile-update-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.profiles-container {
+  display: grid;
+  row-gap: 20px;
+  margin: 0 auto;
+  width: fit-content;
+}
+
+.profile-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid;
+  padding: 15px;
+}
+
+.profile-pic {
+  width: 100px;
+  border-radius: 50%;
+}
+
+.profile-skills {
+  list-style-position: inside;
 }
