--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+/* import truetype fonts */
+@import './fonts/fonts.css';
 
 /* overriding elements style */
 form {
@@ -35,13 +37,17 @@ button {
 }
 
 /* css */
-.blocks-container {
+.main-container {
   max-width: 1140px;
   margin: 0 auto;
 }
 
+.block-container {
+  padding: 20px 0;
+}
+
 @media screen and (max-width: 1200px) {
-  .blocks-container {
+  .main-container {
     padding: 0px 20px;
   }
 }
@@ -75,28 +81,6 @@ button {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-}
-
-.profiles-container {
-  display: grid;
-  row-gap: 20px;
-  margin: 0 auto;
-  width: fit-content;
-}
-
-.profile-card {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid;
-  padding: 15px;
-}
-
-.profile-pic {
-  width: 100px;
-  border-radius: 50%;
-  display: block;
-  margin: 0 auto;
 }
 
 .profile-skills {
