--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -2,11 +2,7 @@
     font-family: "Champion HTF-Welterweight";
     src: url("./champion.otf") format("otf");
 }
-
-@font-face {
-    font-family: "Chronicle Display";
-    src: url("./Chronicle-Display-Roman.otf") format("otf");
-} */
+*/
 
 @font-face {
     font-family: "gilroy";
