--- a/src/index.css
+++ b/src/index.css
@@ -38,18 +38,23 @@ button {
 }
 
 /* css */
-.main-container {
+.main-container, .head.main-container {
   max-width: 1140px;
   margin: 0 auto;
+  padding:40px 0;
 }
 
-.block-container {
-  padding: 40px 0;
+.head.main-container{
+  padding:0;
 }
 
 @media screen and (max-width: 1200px) {
   .main-container {
-    padding: 0px 20px;
+    padding: 40px 20px;
+  }
+
+  .head.main-container{
+    padding:0 20px;
   }
 }
 
@@ -78,12 +83,3 @@ button {
   color: white;
 }
 
-.profile-update-container {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.profile-skills {
-  list-style-position: inside;
-}
