Add Footer, new Loader

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 /* import truetype fonts */
-@import './fonts/fonts.css';
+@import "./fonts/fonts.css";
 
 /* overriding elements style */
 form {
@@ -33,19 +33,16 @@ a {
   color: #000;
 }
 
-button {
-  cursor: pointer;
-}
-
 /* css */
-.main-container, .head.main-container {
+.main-container,
+.head.main-container {
   max-width: 1140px;
   margin: 0 auto;
-  padding:40px 0;
+  padding: 40px 0;
 }
 
-.head.main-container{
-  padding:0;
+.head.main-container {
+  padding: 0;
 }
 
 @media screen and (max-width: 1200px) {
@@ -53,24 +50,7 @@ button {
     padding: 40px 20px;
   }
 
-  .head.main-container{
-    padding:0 20px;
+  .head.main-container {
+    padding: 0 20px;
   }
 }
-
-.alert-danger {
-  color: red;
-}
-
-.alert-success {
-  color: green;
-}
-
-.social-link-toggle {
-  display: inline-block;
-  width: fit-content;
-  cursor: pointer;
-  background: black;
-  color: white;
-}
-
